flapivor/tests/m3/hopix/typechecker/bad/30-record-04.hopix
type T<a> = { l : a }

val x : T<String> = { l = 0 }<String>